// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddShowOptions.test.js renders with \`enable-anime-options\` disabled 1`] = `
<div
  id="add-show-options-content"
>
  <fieldset
    class="component-group-list"
  >
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="customQuality"
        >
          <span>
            Quality
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <quality-chooser-stub
            overall-quality="328"
          />
        </div>
      </div>
    </div>
     
    <div
      id="use-subtitles"
    >
      <div
        id="config-toggle-slider-content"
      >
        <div
          class="form-group"
        >
          <div
            class="row"
          >
            <label
              class="col-sm-2 control-label"
              for="subtitles"
            >
              <span>
                Subtitles
              </span>
            </label>
             
            <div
              class="col-sm-10 content"
            >
              <toggle-button-stub
                height="22"
                id="subtitles"
                name="subtitles"
                sync=""
                width="45"
              />
               
              <p>
                Download subtitles for this show?
              </p>
               
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="defaultStatus"
        >
          <span>
            Status for previously aired episodes
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <select
            class="form-control form-control-inline input-sm"
            id="defaultStatus"
          >
            <option
              value="5"
            >
              Skipped
            </option>
            <option
              value="3"
            >
              Wanted
            </option>
            <option
              value="7"
            >
              Ignored
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="defaultStatusAfter"
        >
          <span>
            Status for all future episodes
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <select
            class="form-control form-control-inline input-sm"
            id="defaultStatusAfter"
          >
            <option
              value="5"
            >
              Skipped
            </option>
            <option
              value="3"
            >
              Wanted
            </option>
            <option
              value="7"
            >
              Ignored
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      id="config-toggle-slider-content"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
        >
          <label
            class="col-sm-2 control-label"
            for="season_folders"
          >
            <span>
              Season Folders
            </span>
          </label>
           
          <div
            class="col-sm-10 content"
          >
            <toggle-button-stub
              height="22"
              id="season_folders"
              name="season_folders"
              sync=""
              width="45"
            />
             
            <p>
              Group episodes by season folders?
            </p>
             
          </div>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      id="config-toggle-slider-content"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
        >
          <label
            class="col-sm-2 control-label"
            for="scene"
          >
            <span>
              Scene Numbering
            </span>
          </label>
           
          <div
            class="col-sm-10 content"
          >
            <toggle-button-stub
              height="22"
              id="scene"
              name="scene"
              sync=""
              width="45"
            />
             
            <p>
              Is this show scene numbered?
            </p>
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="saveDefaultsButton"
        >
          <span>
            Use current values as the defaults
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <button
            class="btn-medusa btn-inline"
            type="button"
          >
            Save Defaults
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`AddShowOptions.test.js renders with \`enable-anime-options\` enabled 1`] = `
<div
  id="add-show-options-content"
>
  <fieldset
    class="component-group-list"
  >
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="customQuality"
        >
          <span>
            Quality
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <quality-chooser-stub
            overall-quality="328"
          />
        </div>
      </div>
    </div>
     
    <div
      id="use-subtitles"
    >
      <div
        id="config-toggle-slider-content"
      >
        <div
          class="form-group"
        >
          <div
            class="row"
          >
            <label
              class="col-sm-2 control-label"
              for="subtitles"
            >
              <span>
                Subtitles
              </span>
            </label>
             
            <div
              class="col-sm-10 content"
            >
              <toggle-button-stub
                height="22"
                id="subtitles"
                name="subtitles"
                sync=""
                width="45"
              />
               
              <p>
                Download subtitles for this show?
              </p>
               
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="defaultStatus"
        >
          <span>
            Status for previously aired episodes
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <select
            class="form-control form-control-inline input-sm"
            id="defaultStatus"
          >
            <option
              value="5"
            >
              Skipped
            </option>
            <option
              value="3"
            >
              Wanted
            </option>
            <option
              value="7"
            >
              Ignored
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="defaultStatusAfter"
        >
          <span>
            Status for all future episodes
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <select
            class="form-control form-control-inline input-sm"
            id="defaultStatusAfter"
          >
            <option
              value="5"
            >
              Skipped
            </option>
            <option
              value="3"
            >
              Wanted
            </option>
            <option
              value="7"
            >
              Ignored
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      id="config-toggle-slider-content"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
        >
          <label
            class="col-sm-2 control-label"
            for="season_folders"
          >
            <span>
              Season Folders
            </span>
          </label>
           
          <div
            class="col-sm-10 content"
          >
            <toggle-button-stub
              height="22"
              id="season_folders"
              name="season_folders"
              sync=""
              width="45"
            />
             
            <p>
              Group episodes by season folders?
            </p>
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      id="config-toggle-slider-content"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
        >
          <label
            class="col-sm-2 control-label"
            for="anime"
          >
            <span>
              Anime
            </span>
          </label>
           
          <div
            class="col-sm-10 content"
          >
            <toggle-button-stub
              height="22"
              id="anime"
              name="anime"
              sync=""
              width="45"
            />
             
            <p>
              Is this show an Anime?
            </p>
             
          </div>
        </div>
      </div>
    </div>
     
    <!---->
     
    <div
      id="config-toggle-slider-content"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
        >
          <label
            class="col-sm-2 control-label"
            for="scene"
          >
            <span>
              Scene Numbering
            </span>
          </label>
           
          <div
            class="col-sm-10 content"
          >
            <toggle-button-stub
              height="22"
              id="scene"
              name="scene"
              sync=""
              width="45"
            />
             
            <p>
              Is this show scene numbered?
            </p>
             
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="form-group"
    >
      <div
        class="row"
      >
        <label
          class="col-sm-2 control-label"
          for="saveDefaultsButton"
        >
          <span>
            Use current values as the defaults
          </span>
        </label>
         
        <div
          class="col-sm-10 content"
        >
          <button
            class="btn-medusa btn-inline"
            type="button"
          >
            Save Defaults
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
